[gd_scene load_steps=4 format=3 uid="uid://bpmwxjjfiy4oh"]

[ext_resource type="Texture2D" uid="uid://b64kv6eakyffd" path="res://Sprites/axe.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Tool.gd" id="2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_25oyu"]
size = Vector2(122, 164)

[node name="Tool" type="Area2D"]
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.32, 0.32)
texture = ExtResource("1")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 14.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_25oyu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_25oyu")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
